feat: add shared script library
